<resources>
    <string name="appname">PresentShopping</string>
    <string name="loadingPleaseWait">正在加载,请稍等…</string>
    <string name="NetworkError">网络不可用，请稍后再试。</string>
    <string name="sure">确定</string>
    <string name="Login">登录</string>
    <string name="phone_name">请输入手机号</string>
    <string name="voe_name">请输入验证码</string>
    <string name="GetSMSCode">获取验证码</string>
    <string name="PleaseEnterSMSCode">手机号</string>
    <string name="TabText1">首页</string>
    <string name="TabText2">商家</string>
    <string name="TabText3">积分商城</string>
    <string name="TabText4">我的</string>
    <string name="ToResend">重新发送</string>
    <string name="AccountCannotEmpty">请输入手机号</string>
    <string name="TheVerificationCodeSent">验证码已发送</string>
    <string name="loginSucceeded">登录成功</string>
    <string name="LoginFailed">登录失败</string>
    <string name="text_share">分享</string>
    <string name="text_msg">消息</string>
    <string name="personal_center">个人中心</string>
    <string name="sign">签到</string>

    <string name="meScan">我的订单</string>
    <string name="mespreadcosd">我的推广海报</string>
    <string name="meteam">我的团队</string>
    <string name="mespread">我的推广</string>
    <string name="mewallet">提现</string>
    <string name="melocation">我的地址</string>
    <string name="mesetting">基础设置</string>
    
    <string name="particulars">拼团详情</string>


</resources>