<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/lonig_ly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:orientation="horizontal">

        <com.example.presentshopping.ui.custom.RoundImageView
            android:id="@+id/lonig_min"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:src="@mipmap/iconi" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:text="@string/app_name"
            android:textColor="@color/purple_200"
            android:textSize="35dp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lonig_ly"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="15dp"

        android:orientation="vertical">


        <RelativeLayout
            android:id="@+id/rl_SMSCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_getSMSCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@drawable/shape_maincolor_line_15"
                android:gravity="center"
                android:paddingLeft="15dp"
                android:paddingTop="5dp"
                android:paddingRight="15dp"
                android:paddingBottom="5dp"
                android:text="@string/GetSMSCode"
                android:textColor="@color/colorMain"
                android:textSize="13sp" />

            <EditText
                android:maxLength="11"
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/tv_getSMSCode"
                android:background="@color/colorEmpty"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:hint="@string/PleaseEnterSMSCode"
                android:inputType="phone"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textColor="@color/colorFontDark"
                android:textColorHint="@color/colorFontLight"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignBottom="@id/et_phone"
                android:background="@color/colorLines" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_SMSCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorEmpty"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:hint="@string/voe_name"
                android:inputType="number"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textColor="@color/colorFontDark"
                android:textColorHint="@color/colorFontLight"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignBottom="@id/et_SMSCode"
                android:background="@color/colorLines" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/ellipse_maincolor_bg_10"
            android:gravity="center"
            android:text="@string/Login"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />

    </LinearLayout>


</RelativeLayout>