<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.MainActivity">

    <!--<include layout="@layout/toolbar_back_include" />-->
    <FrameLayout
        android:id="@+id/id_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <View
        android:id="@+id/line_title"
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:background="@color/colorLines"
        android:visibility="visible" />
    <LinearLayout
        android:id="@+id/mainLinButtonBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorWhite"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="4dp"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/ly_Tab1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="visible">

            <ImageView
                android:id="@+id/ivTab1"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:minWidth="25dip"
                android:scaleType="fitCenter"
                android:src="@mipmap/shouye" />

            <TextView
                android:id="@+id/tvTab1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dip"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/TabText1"
                android:textColor="@color/colorMain"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_Tab2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="visible">

            <ImageView
                android:id="@+id/iv_Tab2"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:minWidth="25dip"
                android:scaleType="fitCenter"
                android:src="@mipmap/gouwuche1" />

            <TextView
                android:id="@+id/tv_Tab2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dip"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/TabText2"
                android:textColor="@color/colorLineBox"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_Tab3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="visible">

            <ImageView
                android:id="@+id/iv_Tab3"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:minWidth="25dip"
                android:scaleType="fitCenter"
                android:src="@mipmap/fenlei1" />

            <TextView
                android:id="@+id/tv_Tab3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dip"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/TabText3"
                android:textColor="@color/colorLineBox"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_Tab4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="visible">

            <ImageView
                android:id="@+id/iv_Tab4"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:minWidth="25dip"
                android:scaleType="fitCenter"
                android:src="@mipmap/gerenzhongxin1" />

            <TextView
                android:id="@+id/tv_Tab4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dip"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/TabText4"
                android:textColor="@color/colorLineBox"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>